@@ -1,6 +1,14 @@
 module.exports = [
-    {"table_name": "Bar #1", "capacity": 1, "reservation_id": 1},
-    {"table_name": "Bar #2", "capacity": 1, "reservation_id": 1},
-    {"table_name": "#1", "capacity": 6, "reservation_id": 1},
-    {"table_name": "#2", "capacity": 6, "reservation_id": 1}
+    {"table_name": "Bar #1", "capacity": 1},
+    {"table_name": "Bar #2", "capacity": 1},
+    {"table_name": "#1", "capacity": 6},
+    {"table_name": "#2", "capacity": 6}
 ]
+
+
+// module.exports = [
+//     {"table_name": "Bar #1", "capacity": 1, "reservation_id": 1},
+//     {"table_name": "Bar #2", "capacity": 1, "reservation_id": 1},
+//     {"table_name": "#1", "capacity": 6, "reservation_id": 1},
+//     {"table_name": "#2", "capacity": 6, "reservation_id": 1}
+// ]
